apps/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
      - name: home-assistant
        image: ghcr.io/home-assistant/home-assistant:2025.6.3
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1Gi
        securityContext:
          privileged: true
        volumeMounts:
        - name: config
          mountPath: /config
        - name: config-yaml
          mountPath: /config/configuration.yaml
          subPath: configuration.yaml
        - name: external-data
          mountPath: /external
        - name: tty-ama10
          mountPath: /dev/ttyAMA10
        - name: tty-usb0
          mountPath: /dev/ttyUSB0
        ports:
        - containerPort: 8123
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: home-assistant-config
      - name: config-yaml
        configMap:
          name: home-assistant-config
      - name: external-data
        persistentVolumeClaim:
          claimName: home-assistant-external
      - name: tty-ama10
        hostPath:
          path: /dev/ttyAMA10
          type: CharDevice
      - name: tty-usb0
        hostPath:
          path: /dev/ttyUSB0
          type: CharDevice
